# FinBridge

./: .gitignore  CLAUDE.md  README.md  export_tables.py  main.py  positions_table.py  pyproject.toml  requirements.txt  saxo.py  saxo_login.py
src/finbridge/: export_tables.py  main.py  positions_table.py  saxo_login.py
